--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/cmTDD
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=AZE
 
 server.port=8080
 
