--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,12 @@
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/cmTDD
 spring.datasource.username=postgres
-spring.datasource.password=AZE
+spring.datasource.password=1234
 
 server.port=8080
 
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
